--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Pentameter Project</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 <body>
 <div id="container"></div>
-<script src="/static/bundle.js"></script>
+<!--developer-->
+<!--<script src="/static/bundle.js"></script>-->
+<!--prod-->
+<script src="dist/bundle.js"></script>
 </body>
 </html>
