remove client diff between prod & dev settings

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 </head>
 <body>
 <div id="container"></div>
-<!--developer-->
-<!--<script src="/static/bundle.js"></script>-->
-<!--prod-->
-<script src="dist/bundle.js"></script>
+<script src="./dist/bundle.js"></script>
 </body>
 </html>
